--- a/index.html
+++ b/index.html
@@ -44,9 +44,62 @@
     <!-- Header Section End -->
 
     <!-- Hero Section Begin -->
-    <section class="hero" id="hero">
-
-    </section>
+        <section class="hero" id="hero">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="hero__categories">
+                            <div class="hero__categories__all">
+                                <i class="fa fa-bars"></i>
+                                <span>Tất cả danh mục</span>
+                            </div>
+                            <ul>
+                                <li><a href="#">Fresh Meat</a></li>
+                                <li><a href="#">Vegetables</a></li>
+                                <li><a href="#">Fruit & Nut Gifts</a></li>
+                                <li><a href="#">Fresh Berries</a></li>
+                                <li><a href="#">Ocean Foods</a></li>
+                                <li><a href="#">Butter & Eggs</a></li>
+                                <li><a href="#">Fastfood</a></li>
+                                <li><a href="#">Fresh Onion</a></li>
+                                <li><a href="#">Papayaya & Crisps</a></li>
+                                <li><a href="#">Oatmeal</a></li>
+                                <li><a href="#">Fresh Bananas</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-9">
+                        <div class="hero__search">
+                            <div class="hero__search__form">
+                                <form action="#">
+                                    <div class="hero__search__categories">
+                                        Tất cả
+                                        <span class="arrow_carrot-down"></span>
+                                    </div>
+                                    <input type="text" placeholder="What do yo u need?">
+                                    <button type="submit" class="site-btn">Tìm kiếm</button>
+                                </form>
+                            </div>
+                            <div class="hero__search__phone">
+                                <div class="hero__search__phone__icon">
+                                    <i class="fa fa-heart"></i>
+                                </div>
+                                <div class="hero__search__phone__text">
+                                    <a href="./shoping-cart.html"><i class="fa fa-shopping-bag"></i></a> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hero__item set-bg" data-setbg="img/banner/banner-1.png">
+                            <div class="hero__text">
+                                <span>Thương mại điện tử</span>
+                                <h2>Hàng chính<br />hãng 100%</h2>
+                                <a href="#" class="primary-btn">Mua ngay</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     <!-- Hero Section End -->
 
     <!-- Categories Section Begin -->
@@ -55,27 +108,32 @@
             <div class="row">
                 <div class="categories__slider owl-carousel">
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="img/categories/cat-1.jpg">
+                        <div class="categories__item set-bg" >
+                            <img src="./img/featured/feature1.png" alt="">
                             <h5><a href="#">Điện thoại</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="img/categories/cat-2.jpg">
+                        <div class="categories__item set-bg">
+                            <img src="./img/featured/feature1.png" alt="">
                             <h5><a href="#">Laptop</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="img/categories/cat-3.jpg">
+                        <div class="categories__item set-bg" >
+                            <img src="./img/featured/feature1.png" alt="">
                             <h5><a href="#">Thời trang</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="img/categories/cat-4.jpg">
+                        <div class="categories__item set-bg" >
+                            <img src="./img/featured/feature1.png" alt="">
                             <h5><a href="#">Phụ kiện</a></h5>
                         </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="categories__item set-bg" data-setbg="img/categories/cat-5.jpg">
+                        <div class="categories__item set-bg" >
+                            <img src="./img/featured/feature1.png" alt="">
                             <h5><a href="#">Phụ kiện</a></h5>
                         </div>
                     </div>
