--- a/resigter.html
+++ b/resigter.html
@@ -67,7 +67,7 @@
 	<!-- Breadcrumb Section End -->
 
 
-	<section class="vh-100">
+	<section class="vh-100 box-form-login">
 		<div class="container py-5 h-100">
 			<div class="row d-flex align-items-center justify-content-center h-100">
 				<div class="col-md-8 col-lg-7 col-xl-6">
@@ -77,29 +77,33 @@
 				<div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
 					<form>
 						<div class="form-outline mb-4">
+							<label class="form-label" for="form1Example13">Họ và tên</label>
 							<input type="email" id="form1Example13" class="form-control form-control-lg"
 								placeholder="Nhập Họ và tên" />
-							<label class="form-label" for="form1Example13">Họ và tên</label>
 						</div>
 						<div class="form-outline mb-4">
+							<label class="form-label" for="form1Example13">Email</label>
 							<input type="email" id="form1Example13" class="form-control form-control-lg"
 								placeholder="Nhập email" />
-							<label class="form-label" for="form1Example13">Email</label>
 						</div>
 						<!-- Email input -->
 						<div class="form-outline mb-4">
+							<label class="form-label" for="form1Example13">Email</label>
 							<input type="email" id="form1Example13" class="form-control form-control-lg"
 								placeholder="Nhập email" />
-							<label class="form-label" for="form1Example13">Email</label>
 						</div>
 
 						<!-- Password input -->
 						<div class="form-outline mb-4">
+							<label class="form-label" for="form1Example23">Mật khẩu</label>
 							<input type="password" id="form1Example23" class="form-control form-control-lg"
 								placeholder="Nhập mật khẩu" />
-							<label class="form-label" for="form1Example23">Mật khẩu</label>
 						</div>
-
+						<div class="form-outline mb-4">
+							<label class="form-label" for="form1Example23">Xác nhận mật khẩu</label>
+							<input type="password" id="form1Example23" class="form-control form-control-lg"
+								placeholder="Nhập mật khẩu" />
+						</div>
 						<div class="d-flex justify-content-around align-items-center mb-4">
 							<a href="./login.html">Đã có tài khoản </a>
 						</div>
