--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -78,7 +78,7 @@
                                     <th class="shoping__product">Sản phẩm</th>
                                     <th>Giá</th>
                                     <th>Số lượng</th>
-                                    <th>Giá</th>
+                                    <th>Tổng</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -136,9 +136,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="shoping__cart__btns">
-                        <a href="#" class="primary-btn cart-btn">Tiếp tục mua sắp</a>
-                        <a href="./shop-grid.html" class="primary-btn cart-btn cart-btn-right"><span class="icon_loading"></span>
-                            Cập nhật giỏ hàng</a>
+                        <a href="./shop-grid.html" class="primary-btn cart-btn">Tiếp tục mua sắp</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
