--- a/checkout.html
+++ b/checkout.html
@@ -76,7 +76,7 @@
             <div class="checkout__form">
                 <h4>Thông tin chi tiết</h4>
                     <div class="row">
-                        <div class="col-lg-8 col-md-6">
+                        <div class="col-lg-7 col-md-6">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="checkout__input">
@@ -117,20 +117,23 @@
                             </div>
                             <div class="col-lg-6">
                                     <h5>Mã giảm giá:</h5>
-                                    <select id="km" >
-                                        
-                                      </select>
+                                    <select name="km" class="discount" id="km" >
+                                        <option value="" disabled>Chọn mã</option>
+                                    </select>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-5 col-md-6">
                             <div class="checkout__order">
                                 <h4>Đơn hàng của bạn</h4>
                                 <div class="checkout__order__products">Sản phẩm <span>Giá</span></div>
                                 <ul id="sanpham">
                                 </ul>
-                                <Hr></Hr>
+
                                 <div style="display:none" class="checkout__order__subtotal">Subtotal <span id="tongtien"></span></div>
-                                <div class="checkout__order__total" >Total <span id="tientong"></span></div>
+                                <div class="checkout__order__total" >
+                                    Total 
+                                    <span id="tientong"></span>
+                                </div>
                                 <p>
                                     Chọn phương thức thanh toán
                                 </p>
