--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -52,7 +52,7 @@
     <!-- Hero Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="img/banner-3.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -103,7 +103,7 @@
                     <div class="shoping__continue">
                         <div class="shoping__discount">
                             <h5>Mã giảm giá:</h5>
-                            <select id="km" >
+                            <select id="km" class="discount" name="km">
                                 
                             </select>
                         </div>
@@ -114,6 +114,7 @@
                         <h5>Tổng giỏ hàng</h5>
                         <ul>
                             <li>Giá <span id="tongtien"></span></li>
+                            <li>Giảm giá <span id="giamgia"></span></li>
                             <li>Tổng <span id="tientong"></span></li>
                         </ul>
                         <a href="./checkout.html" class="primary-btn">Đi đến thanh toán</a>
