--- a/admin/add-dmtong.html
+++ b/admin/add-dmtong.html
@@ -26,6 +26,7 @@
     <div id="preloader">
         <div id="status">
             <div class="spinner"></div>
+            <div></div>
         </div>
     </div>
 
