--- a/shop-grid.html
+++ b/shop-grid.html
@@ -214,7 +214,13 @@
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-
+    <!-- <script>
+        function handlePageNumber(num) {
+            currentPage=num  
+            console.log(currentPage);
+            showProduct();
+        }
+    </script> -->
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
     <script src="./js/danhmuc/hiendanhmuc.js" defer type="module"></script>
@@ -222,5 +228,6 @@
     <Script src="./js/giohang/themvaogiohang.js"></Script>
 
 </body>
+
 
 </html>
