--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <!-- Hero Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="img/blue2.jpg">
+    <section class="breadcrumb-section set-bg" data-setbg="img/banner-3.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
