--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
             <div class="content">
                 <h3>Giảm giá "So deep"</h3>
                 <h2>69<sup>%</sup><span> OFF</span></h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Odit quidem deserunt est itaque incidunt! 
-                    Beatae aut excepturi laudantium cupiditate saepe!
-                </p>
+                from.
                 <a href="./shop-grid.html?idDMT=1">Mua ngay!</a>
             </div>
         </div>
@@ -66,7 +63,7 @@
         window.onload = function(){
             setTimeout(function(){
                 popup.style.display = "block";
-            }, 2000)
+            }, 4000)
         }
 
         close.addEventListener('click', () => {
