--- a/admin/member.html
+++ b/admin/member.html
@@ -136,7 +136,7 @@
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/javascript/users.js"></script>
-
+    <script src="assets/javascript/suauser.js"></script>
 
 </body>
 
