--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
                         <div class="hero__search">
                             <div class="hero__search__form">
                                 <form action="#">
-                                    <div class="hero__search__categories">
-                                        Tất cả
-                                        <span class="arrow_carrot-down"></span>
-                                    </div>
-                                    <input type="text" placeholder="Bạn muốn tìm gì?">
-                                    <button type="submit" class="site-btn">Tìm kiếm</button>
+                                    <input id="search-item" type="text" placeholder="Bạn muốn tìm gì?">
+                                    <button id="btn-search" type="submit" class="site-btn">Tìm kiếm</button>
+                                    <div class="search " id="locsanpham">
+                                        
+                                    </d>
                                 </form>
                             </div>
                         </div>
@@ -479,6 +478,7 @@
     <script src="./js/toastr.min.js"></script>
 
     <!-- JS -->
+    <script src="./js/sanpham/timkiemsanpham.js"></script>
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
     <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
     <script src="./js/footAndHead.js"></script>
