--- a/userdetail.html
+++ b/userdetail.html
@@ -80,7 +80,7 @@
           <thead>
             <tr>
               <th>#</th>
-              <th>Tên sản phẩm</th>
+              <th style="width: 250px;">Tên sản phẩm</th>
               <th>Hình ảnh</th>
               <th>Số lượng</th>
               <th>Giá</th>
